--- a/index.html
+++ b/index.html
@@ -5,8 +5,224 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fifa World Cup - 2022</title>
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/14f242d88e.js" crossorigin="anonymous"></script>
+    <!-- CSS Stylesheet  -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <!-- Header Section Start -->
+    <header>
+        <div class="container hero">
+            <div class="hero-info">
+                <h1>The Greatest show on the earth</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply
+                random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <button>Watch Live <i class="fa-solid fa-angle-right"></i></button>
+            </div>
+            <div class="hero-image">
+                <img src="assets/Banner Image.png" alt="">
+            </div>
+        </div>
+    </header>
+    <!-- Header Section End -->
+
+    <!-- Main Section Start -->
+    <main>
+        <div class="match-details container">
+            <!-- Aside Start -->
+            <aside class="match-details-items">
+                <div class="match-details-item">
+                    <a href="">Upcoming Match</a>
+                    <a href="">All Group</a>
+                    <a href="" class="active-item">Blog</a>
+                </div>
+            </aside>
+            <!-- Aside End -->
+            <!-- Blog Section Start -->
+            <div class="blogs">
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <button class="blog-btn">Transfer</button>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-meta">
+                            <div class="blog-time">
+                                <i class="fa-regular fa-clock"></i><span> 10h</span>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-message"></i><span> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <button class="blog-btn">Transfer</button>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-meta">
+                            <div class="blog-time">
+                                <i class="fa-regular fa-clock"></i><span> 10h</span>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-message"></i><span> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <button class="blog-btn">Transfer</button>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-meta">
+                            <div class="blog-time">
+                                <i class="fa-regular fa-clock"></i><span> 10h</span>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-message"></i><span> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <button class="blog-btn">Transfer</button>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-meta">
+                            <div class="blog-time">
+                                <i class="fa-regular fa-clock"></i><span> 10h</span>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-message"></i><span> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <button class="blog-btn">Transfer</button>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-meta">
+                            <div class="blog-time">
+                                <i class="fa-regular fa-clock"></i><span> 10h</span>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-message"></i><span> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <button class="blog-btn">Transfer</button>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-meta">
+                            <div class="blog-time">
+                                <i class="fa-regular fa-clock"></i><span> 10h</span>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-message"></i><span> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <button class="blog-btn">Transfer</button>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-meta">
+                            <div class="blog-time">
+                                <i class="fa-regular fa-clock"></i><span> 10h</span>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-message"></i><span> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <button class="blog-btn">Transfer</button>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-meta">
+                            <div class="blog-time">
+                                <i class="fa-regular fa-clock"></i><span> 10h</span>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-message"></i><span> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <button class="blog-btn">Transfer</button>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-meta">
+                            <div class="blog-time">
+                                <i class="fa-regular fa-clock"></i><span> 10h</span>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-message"></i><span> 23</span>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
+            <div class="view-all-btn">
+                <button>View All</button>
+            </div>
+            <!-- Blog Section End -->
+        </div>
+    </main>
+    <!-- Main Section End -->
+
+
+    <!-- Header Section Start -->
+    <!-- Header Section End -->
+
+    <!-- Footer Section Start -->
+    <footer>
+        <div class="container">
+            <h2>Goal</h2>
+            <hr>
+            <div class="menu-list">
+                <ul>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Terms of Service </a></li>
+                    <li><a href="">Privacy Policy </a></li>
+                    <li><a href="">Privacy Settings</a></li>
+                    <li><a href="">Goal App Goal Live</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer Section End -->
 </body>
 </html>
