HTML Massive Change

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <!-- Aside Start -->
             <aside class="match-details-items">
                 <div class="match-details-item">
-                    <a href="">Upcoming Match</a>
+                    <a href="match.html">Upcoming Match</a>
                     <a href="">All Group</a>
-                    <a href="" class="active-item">Blog</a>
+                    <a href="index.html" class="active-item">Blog</a>
                 </div>
             </aside>
             <!-- Aside End -->
@@ -203,10 +203,6 @@
     </main>
     <!-- Main Section End -->
 
-
-    <!-- Header Section Start -->
-    <!-- Header Section End -->
-
     <!-- Footer Section Start -->
     <footer>
         <div class="container">
@@ -220,6 +216,11 @@
                     <li><a href="">Privacy Settings</a></li>
                     <li><a href="">Goal App Goal Live</a></li>
                 </ul>
+            </div>
+            <div class="social-icons">
+                <a href="https://web.facebook.com/amit.kumar.sutradhar.vidyut/"><i class="fa-brands fa-facebook-square"></i></a>
+                <a href="https://twitter.com/"><i class="fa-brands fa-instagram-square"></i></a>
+                <a href="https://www.linkedin.com"><i class="fa-brands fa-twitter-square"></i></a>
             </div>
         </div>
     </footer>
