--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1>The Greatest show on the earth</h1>
                 <p>Contrary to popular belief, Lorem Ipsum is not simply
                 random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                <button>Watch Live <i class="fa-solid fa-angle-right"></i></button>
+                <button class="hero-btn">Watch Live <i class="fa-solid fa-angle-right"></i></button>
             </div>
             <div class="hero-image">
                 <img src="assets/Banner Image.png" alt="">
@@ -214,7 +214,8 @@
                     <li><a href="">Terms of Service </a></li>
                     <li><a href="">Privacy Policy </a></li>
                     <li><a href="">Privacy Settings</a></li>
-                    <li><a href="">Goal App Goal Live</a></li>
+                    <li><a href="">Goal Live</a></li>
+                    <li><a href="">Goal Live</a></li>
                 </ul>
             </div>
             <div class="social-icons">
