--- a/match.html
+++ b/match.html
@@ -34,9 +34,9 @@
             <!-- Aside Start -->
             <aside class="match-details-items">
                 <div class="match-details-item">
-                    <a href="match.html">Upcoming Match</a>
+                    <a href="match.html" class="active-item">Upcoming Match</a>
                     <a href="">All Group</a>
-                    <a href="index.html" class="active-item">Blog</a>
+                    <a href="index.html" >Blog</a>
                 </div>
             </aside>
             <!-- Aside End -->
@@ -139,8 +139,14 @@
                     <li><a href="">Terms of Service </a></li>
                     <li><a href="">Privacy Policy </a></li>
                     <li><a href="">Privacy Settings</a></li>
-                    <li><a href="">Goal App Goal Live</a></li>
+                    <li><a href="">Goal App</a></li>
+                    <li><a href="">Goal Live</a></li>
                 </ul>
+            </div>
+            <div class="social-icons">
+                <a href="https://web.facebook.com/amit.kumar.sutradhar.vidyut/"><i class="fa-brands fa-facebook-square"></i></a>
+                <a href="https://twitter.com/"><i class="fa-brands fa-instagram-square"></i></a>
+                <a href="https://www.linkedin.com"><i class="fa-brands fa-twitter-square"></i></a>
             </div>
         </div>
     </footer>
