--- a/match.html
+++ b/match.html
@@ -17,8 +17,9 @@
         <div class="container hero">
             <div class="hero-info">
                 <h1>The Greatest show on the earth</h1>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply
-                random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <p>Experience the magnificent atmosphere in World Cup Qatar 2022 matches.The next edition of the FIFA World Cup will be
+                    held in Qatar in the year 2022. The competition is scheduled to be played
+                    from November 21, 2022 to December 18,2022.</p>
                 <button>Watch Live <i class="fa-solid fa-angle-right"></i></button>
             </div>
             <div class="hero-image">
